--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,20 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.example.sdsa.myapplication.UserInfoActivity"
             android:label="@string/userInfo_title"
+            android:parentActivityName="com.example.sdsa.myapplication.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
+            android:name="com.example.sdsa.myapplication.SignUpActivity"
+            android:label="@string/signup_title"
             android:parentActivityName="com.example.sdsa.myapplication.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
